--- a/starter-code/styles/base.css
+++ b/starter-code/styles/base.css
@@ -6,7 +6,9 @@ body {
   font-size: 100%;
   color: #313131;
 }
-
+main {
+  background-color: #7FFFD4;
+}
 hr {
   margin: 1em;
   width: 80%;
@@ -27,11 +29,11 @@ address {
 
 a, a:link, a:active {
   text-decoration: none;
-  color: #777;
+  color: #DC143C;
 }
 
 a:hover, a:focus {
-  color: #29506D;
+  color: #DC143C;
 }
 
 a:visited {
