--- a/starter-code/styles/base.css
+++ b/starter-code/styles/base.css
@@ -27,11 +27,11 @@ address {
 
 a, a:link, a:active {
   text-decoration: none;
-  color: #777;
+  color: #6500FF;
 }
 
 a:hover, a:focus {
-  color: #29506D;
+  color: #FF0700;
 }
 
 a:visited {
