--- a/starter-code/styles/base.css
+++ b/starter-code/styles/base.css
@@ -22,6 +22,14 @@ address {
   display: inline-block;
 }
 
+h1 {
+  color: purple;
+}
+
+address a {
+  color: purple;
+}
+
 /*LINK STYLES
 =======================================*/
 
